--- a/PS4-CHEME-5800-Student-SA-MinVarPortfolioAllocation-Fall-2025.ipynb
+++ b/PS4-CHEME-5800-Student-SA-MinVarPortfolioAllocation-Fall-2025.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c5b5b089",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
     }
    ],
    "source": [
-    "maximum_number_trading_days = original_dataset[\"AAPL\"] |> nrow # nrow? (check out: DataFrames.jl)"
+    "maximum_number_trading_days = original_dataset[\"AAPL\"] |> nrow # nrow? Ans:2757 (check out: DataFrames.jl)"
    ]
   },
   {
@@ -214,10 +214,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "0bfcd00c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, DataFrame} with 424 entries:\n",
+       "  \"EMR\"  => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"CTAS\" => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"HSIC\" => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"KIM\"  => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"PLD\"  => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"IEX\"  => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"BAC\"  => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"CBOE\" => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"EXR\"  => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"NCLH\" => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"CVS\"  => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"DRI\"  => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"DTE\"  => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"ZION\" => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"AVY\"  => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"EW\"   => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"EA\"   => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"NWSA\" => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  \"CAG\"  => \u001b[1m2767×8 DataFrame\u001b[0m\u001b[0m…\n",
+       "  ⋮      => ⋮"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "dataset = let\n",
     "\n",
@@ -231,7 +261,9 @@
     "        end\n",
     "    end\n",
     "    dataset; # return\n",
-    "end;"
+    "end;\n",
+    "\n",
+    "dataset\n"
    ]
   },
   {
@@ -528,10 +560,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "260a7b00",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20×20 Matrix{Float64}:\n",
+       " 0.054998   0.0301101  0.02693     …  0.0100583   0.010599    0.0318438\n",
+       " 0.0301101  0.0464282  0.028659       0.010647    0.011418    0.0376359\n",
+       " 0.02693    0.028659   0.086602       0.00865432  0.0134417   0.0291464\n",
+       " 0.0386414  0.0364987  0.0564706      0.0115171   0.0125706   0.0434187\n",
+       " 0.0418636  0.0405472  0.0461653      0.00926592  0.0156919   0.0523955\n",
+       " 0.0228452  0.0215869  0.0289937   …  0.012514    0.0139647   0.0228899\n",
+       " 0.0216485  0.0204548  0.0284563      0.0130968   0.0150053   0.021651\n",
+       " 0.0179128  0.0176504  0.0261185      0.0118814   0.0145818   0.0176525\n",
+       " 0.0251574  0.0231297  0.0323765      0.0136831   0.0156629   0.0255313\n",
+       " 0.024752   0.021397   0.0300845      0.0111266   0.0139957   0.0226496\n",
+       " 0.0256372  0.0220835  0.0332688   …  0.0119763   0.0142186   0.0241708\n",
+       " 0.0102411  0.0101588  0.00955275     0.013945    0.0151497   0.00934869\n",
+       " 0.0102522  0.0111042  0.00923115     0.0102545   0.00901673  0.00909239\n",
+       " 0.0179352  0.0162204  0.0205376      0.00747354  0.0107591   0.0199562\n",
+       " 0.0172989  0.0167147  0.0151703      0.00813975  0.00833206  0.0188198\n",
+       " 0.0165853  0.0144001  0.0198641   …  0.00858504  0.0104452   0.0177289\n",
+       " 0.0103867  0.0103116  0.00950283     0.00784337  0.0076959   0.00995426\n",
+       " 0.0100583  0.010647   0.00865432     0.0357644   0.0164734   0.00943222\n",
+       " 0.010599   0.011418   0.0134417      0.0164734   0.0410785   0.0114941\n",
+       " 0.0318438  0.0376359  0.0291464      0.00943222  0.0114941   0.0763546"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "ḡₚ, Σ̂ₚ = let\n",
     "\n",
@@ -556,7 +618,9 @@
     "    end\n",
     "\n",
     "    (ḡₚ, Σ̂ₚ); # return\n",
-    "end;"
+    "end;\n",
+    "\n",
+    "Σ̂ₚ\n"
    ]
   },
   {
@@ -847,15 +911,7 @@
    "execution_count": 19,
    "id": "23a8fbb8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Risk using MadNLP: 0.0169\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "println(\"Risk using MadNLP: $(risk_madnlp |> x-> round(x, digits=4))\");"
    ]
@@ -874,6 +930,13 @@
    "id": "e02c34b0",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Risk using MadNLP: 0.0169\n"
+     ]
+    },
     {
      "ename": "UndefVarError",
      "evalue": "UndefVarError: `ŵ` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
@@ -1194,17 +1257,17 @@
       " [8] top-level scope\n",
       "\u001b[90m   @\u001b[39m \u001b[90mc:\\Users\\User\\Documents\\GitHub\\ps4-cheme-5800-f25-cl2832\\\u001b[39m\u001b[90m\u001b[4mjl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y101sZmlsZQ==.jl:3\u001b[24m\u001b[39m\n",
       "\u001b[0m\u001b[1mTest Summary:                                                            | \u001b[22m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[91m\u001b[1mFail  \u001b[22m\u001b[39m\u001b[91m\u001b[1mError  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal  \u001b[22m\u001b[39m\u001b[0m\u001b[1mTime\u001b[22m\n",
-      "CHEME 5800 PS4 Test Suite                                                | \u001b[32m  39  \u001b[39m\u001b[91m   2  \u001b[39m\u001b[91m    7  \u001b[39m\u001b[36m   48  \u001b[39m\u001b[0m4.0s\n",
-      "  Task 1: Compute the growth rate matrix                                 | \u001b[32m  10  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m   10  \u001b[39m\u001b[0m0.6s\n",
-      "  Task 2: Solve the optimal allocation problem using Simulated Annealing | \u001b[32m  13  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    5  \u001b[39m\u001b[36m   19  \u001b[39m\u001b[0m3.0s\n",
+      "CHEME 5800 PS4 Test Suite                                                | \u001b[32m  39  \u001b[39m\u001b[91m   2  \u001b[39m\u001b[91m    7  \u001b[39m\u001b[36m   48  \u001b[39m\u001b[0m5.2s\n",
+      "  Task 1: Compute the growth rate matrix                                 | \u001b[32m  10  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m   10  \u001b[39m\u001b[0m0.8s\n",
+      "  Task 2: Solve the optimal allocation problem using Simulated Annealing | \u001b[32m  13  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    5  \u001b[39m\u001b[36m   19  \u001b[39m\u001b[0m3.9s\n",
       "    Portfolio ticker selection                                           | \u001b[32m   3  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m    3  \u001b[39m\u001b[0m0.0s\n",
       "    Portfolio parameters computation                                     | \u001b[32m   6  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m    6  \u001b[39m\u001b[0m0.0s\n",
       "    Simulated annealing model                                            | \u001b[32m   4  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m    4  \u001b[39m\u001b[0m0.0s\n",
-      "    Optimization results                                                 | \u001b[32m      \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    4  \u001b[39m\u001b[36m    5  \u001b[39m\u001b[0m2.6s\n",
-      "    Portfolio risk calculation                                           | \u001b[32m      \u001b[39m\u001b[91m      \u001b[39m\u001b[91m    1  \u001b[39m\u001b[36m    1  \u001b[39m\u001b[0m0.3s\n",
-      "  Task 3: Check results using another method                             | \u001b[32m  16  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    2  \u001b[39m\u001b[36m   19  \u001b[39m\u001b[0m0.4s\n",
+      "    Optimization results                                                 | \u001b[32m      \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    4  \u001b[39m\u001b[36m    5  \u001b[39m\u001b[0m3.4s\n",
+      "    Portfolio risk calculation                                           | \u001b[32m      \u001b[39m\u001b[91m      \u001b[39m\u001b[91m    1  \u001b[39m\u001b[36m    1  \u001b[39m\u001b[0m0.4s\n",
+      "  Task 3: Check results using another method                             | \u001b[32m  16  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    2  \u001b[39m\u001b[36m   19  \u001b[39m\u001b[0m0.5s\n",
       "    MadNLP model construction                                            | \u001b[32m   3  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m    3  \u001b[39m\u001b[0m0.0s\n",
-      "    MadNLP solution                                                      | \u001b[32m  12  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m   12  \u001b[39m\u001b[0m0.0s\n",
+      "    MadNLP solution                                                      | \u001b[32m  12  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m   12  \u001b[39m\u001b[0m0.1s\n",
       "    Comparative analysis                                                 | \u001b[32m   1  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    2  \u001b[39m\u001b[36m    4  \u001b[39m\u001b[0m0.4s\n"
      ]
     },
