--- a/PS4-CHEME-5800-Student-SA-MinVarPortfolioAllocation-Fall-2025.ipynb
+++ b/PS4-CHEME-5800-Student-SA-MinVarPortfolioAllocation-Fall-2025.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c5b5b089",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "0bfcd00c",
    "metadata": {},
    "outputs": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "260a7b00",
    "metadata": {},
    "outputs": [
@@ -911,7 +911,15 @@
    "execution_count": 19,
    "id": "23a8fbb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Risk using MadNLP: 0.0169\n"
+     ]
+    }
+   ],
    "source": [
     "println(\"Risk using MadNLP: $(risk_madnlp |> x-> round(x, digits=4))\");"
    ]
@@ -930,13 +938,6 @@
    "id": "e02c34b0",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Risk using MadNLP: 0.0169\n"
-     ]
-    },
     {
      "ename": "UndefVarError",
      "evalue": "UndefVarError: `ŵ` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
@@ -1257,18 +1258,18 @@
       " [8] top-level scope\n",
       "\u001b[90m   @\u001b[39m \u001b[90mc:\\Users\\User\\Documents\\GitHub\\ps4-cheme-5800-f25-cl2832\\\u001b[39m\u001b[90m\u001b[4mjl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y101sZmlsZQ==.jl:3\u001b[24m\u001b[39m\n",
       "\u001b[0m\u001b[1mTest Summary:                                                            | \u001b[22m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[91m\u001b[1mFail  \u001b[22m\u001b[39m\u001b[91m\u001b[1mError  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal  \u001b[22m\u001b[39m\u001b[0m\u001b[1mTime\u001b[22m\n",
-      "CHEME 5800 PS4 Test Suite                                                | \u001b[32m  39  \u001b[39m\u001b[91m   2  \u001b[39m\u001b[91m    7  \u001b[39m\u001b[36m   48  \u001b[39m\u001b[0m5.2s\n",
-      "  Task 1: Compute the growth rate matrix                                 | \u001b[32m  10  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m   10  \u001b[39m\u001b[0m0.8s\n",
-      "  Task 2: Solve the optimal allocation problem using Simulated Annealing | \u001b[32m  13  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    5  \u001b[39m\u001b[36m   19  \u001b[39m\u001b[0m3.9s\n",
+      "CHEME 5800 PS4 Test Suite                                                | \u001b[32m  39  \u001b[39m\u001b[91m   2  \u001b[39m\u001b[91m    7  \u001b[39m\u001b[36m   48  \u001b[39m\u001b[0m3.5s\n",
+      "  Task 1: Compute the growth rate matrix                                 | \u001b[32m  10  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m   10  \u001b[39m\u001b[0m0.5s\n",
+      "  Task 2: Solve the optimal allocation problem using Simulated Annealing | \u001b[32m  13  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    5  \u001b[39m\u001b[36m   19  \u001b[39m\u001b[0m2.7s\n",
       "    Portfolio ticker selection                                           | \u001b[32m   3  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m    3  \u001b[39m\u001b[0m0.0s\n",
       "    Portfolio parameters computation                                     | \u001b[32m   6  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m    6  \u001b[39m\u001b[0m0.0s\n",
       "    Simulated annealing model                                            | \u001b[32m   4  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m    4  \u001b[39m\u001b[0m0.0s\n",
-      "    Optimization results                                                 | \u001b[32m      \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    4  \u001b[39m\u001b[36m    5  \u001b[39m\u001b[0m3.4s\n",
-      "    Portfolio risk calculation                                           | \u001b[32m      \u001b[39m\u001b[91m      \u001b[39m\u001b[91m    1  \u001b[39m\u001b[36m    1  \u001b[39m\u001b[0m0.4s\n",
-      "  Task 3: Check results using another method                             | \u001b[32m  16  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    2  \u001b[39m\u001b[36m   19  \u001b[39m\u001b[0m0.5s\n",
+      "    Optimization results                                                 | \u001b[32m      \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    4  \u001b[39m\u001b[36m    5  \u001b[39m\u001b[0m2.4s\n",
+      "    Portfolio risk calculation                                           | \u001b[32m      \u001b[39m\u001b[91m      \u001b[39m\u001b[91m    1  \u001b[39m\u001b[36m    1  \u001b[39m\u001b[0m0.2s\n",
+      "  Task 3: Check results using another method                             | \u001b[32m  16  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    2  \u001b[39m\u001b[36m   19  \u001b[39m\u001b[0m0.3s\n",
       "    MadNLP model construction                                            | \u001b[32m   3  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m    3  \u001b[39m\u001b[0m0.0s\n",
-      "    MadNLP solution                                                      | \u001b[32m  12  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m   12  \u001b[39m\u001b[0m0.1s\n",
-      "    Comparative analysis                                                 | \u001b[32m   1  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    2  \u001b[39m\u001b[36m    4  \u001b[39m\u001b[0m0.4s\n"
+      "    MadNLP solution                                                      | \u001b[32m  12  \u001b[39m\u001b[91m      \u001b[39m\u001b[91m       \u001b[39m\u001b[36m   12  \u001b[39m\u001b[0m0.0s\n",
+      "    Comparative analysis                                                 | \u001b[32m   1  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[91m    2  \u001b[39m\u001b[36m    4  \u001b[39m\u001b[0m0.2s\n"
      ]
     },
     {
@@ -1426,6 +1427,24 @@
    "id": "bfd4aea9",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "68a88232",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I used AI to help me with this assignment.\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"I used AI to help me with this assignment.\");"
+   ]
   }
  ],
  "metadata": {
