--- a/PS4-CHEME-5800-Student-SA-MinVarPortfolioAllocation-Fall-2025.ipynb
+++ b/PS4-CHEME-5800-Student-SA-MinVarPortfolioAllocation-Fall-2025.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 26,
    "id": "dd32d5c9",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 27,
    "id": "03a7d73a",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 28,
    "id": "c5b5b089",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 29,
    "id": "0bfcd00c",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 30,
    "id": "5ca4fe1c",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 31,
    "id": "b55800aa",
    "metadata": {},
    "outputs": [],
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 32,
    "id": "d3030691",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 33,
    "id": "ef9ba667",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 34,
    "id": "b17facfe",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 35,
    "id": "4f68db79",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 36,
    "id": "260a7b00",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 37,
    "id": "bfbde841",
    "metadata": {},
    "outputs": [],
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 38,
    "id": "f8aa87ad",
    "metadata": {},
    "outputs": [],
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 39,
    "id": "3fbbe7d4",
    "metadata": {},
    "outputs": [],
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 40,
    "id": "9109155f",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Portfolio expected return: 0.14761734291142845\n"
+      "Portfolio expected return: 0.1506199813829962\n"
      ]
     }
    ],
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 41,
    "id": "2faff7af",
    "metadata": {},
    "outputs": [
@@ -770,7 +770,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Risk using Simulated Annealing: 0.0308\n"
+      "Risk using Simulated Annealing: 0.0305\n"
      ]
     }
    ],
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 42,
    "id": "8b262378",
    "metadata": {},
    "outputs": [],
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 43,
    "id": "c5c4ebf6",
    "metadata": {},
    "outputs": [],
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 44,
    "id": "23a8fbb8",
    "metadata": {},
    "outputs": [
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 45,
    "id": "e02c34b0",
    "metadata": {},
    "outputs": [
@@ -913,27 +913,27 @@
       " \u001b[1m Ticker \u001b[0m \u001b[1m  MadNLP \u001b[0m \u001b[1m SimulatedAnnealing \u001b[0m\n",
       " \u001b[90m String \u001b[0m \u001b[90m Float64 \u001b[0m \u001b[90m            Float64 \u001b[0m\n",
       " -------- --------- --------------------\n",
-      "    AAPL    0.1242               0.1043\n",
-      "    MSFT     0.156               0.0622\n",
-      "    INTC       0.0               0.0174\n",
-      "      MU       0.0               0.0525\n",
-      "     AMD     0.019               0.1623\n",
-      "      GS       0.0               0.0159\n",
-      "     BAC       0.0               0.0207\n",
-      "     WFC       0.0               0.0213\n",
-      "       C       0.0               0.0307\n",
-      "       F       0.0               0.0368\n",
-      "      GM       0.0               0.0412\n",
-      "     JNJ    0.0755               0.0337\n",
-      "      PG    0.1322               0.0461\n",
-      "     UPS       0.0               0.0365\n",
-      "    COST    0.2445               0.1115\n",
-      "     TGT       0.0               0.0321\n",
-      "     WMT    0.1453               0.0532\n",
-      "     MRK    0.1034               0.0195\n",
-      "     PFE       0.0               0.0325\n",
-      "    ADBE       0.0               0.0703\n",
-      "   Total       1.0              1.00038\n",
+      "    AAPL    0.1242               0.1697\n",
+      "    MSFT     0.156               0.1084\n",
+      "    INTC       0.0               0.0256\n",
+      "      MU       0.0               0.0443\n",
+      "     AMD     0.019               0.1342\n",
+      "      GS       0.0               0.0334\n",
+      "     BAC       0.0               0.0363\n",
+      "     WFC       0.0               0.0429\n",
+      "       C       0.0               0.0275\n",
+      "       F       0.0               0.0282\n",
+      "      GM       0.0               0.0316\n",
+      "     JNJ    0.0755               0.0224\n",
+      "      PG    0.1322               0.0329\n",
+      "     UPS       0.0               0.0231\n",
+      "    COST    0.2445               0.0346\n",
+      "     TGT       0.0               0.0334\n",
+      "     WMT    0.1453               0.0535\n",
+      "     MRK    0.1034               0.0411\n",
+      "     PFE       0.0               0.0161\n",
+      "    ADBE       0.0               0.0573\n",
+      "   Total       1.0             0.996296\n",
       " -------- --------- --------------------\n"
      ]
     }
@@ -988,22 +988,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "id": "0b2359f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put the analysis of your results here."
+    "# Put the analysis of your results here.\n",
+    "# ANS: Without getting rid of the barrier terms, every ticker has non-zero (at least 0.01 of weight) allocation in the SA solution. \n",
+    "# However, in the MadNLP solution, only a few tickers have non-zero allocation, while others have zero allocation. \n",
+    "# This indicates that the SA method tends to distribute weights more evenly across all assets, while MadNLP focuses on a select few to minimize variance while achieving the target return. \n",
+    "# This difference could be due to the nature of the optimization algorithms and how they handle constraints and penalties.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 47,
    "id": "d2d78148",
    "metadata": {},
    "outputs": [],
    "source": [
-    "did_I_answer_the_discussion_question_1 = nothing; # Required: set to {true | false} if you have (or have not) answered the discussion question 1 above."
+    "did_I_answer_the_discussion_question_1 = true; # Required: set to {true | false} if you have (or have not) answered the discussion question 1 above."
    ]
   },
   {
@@ -1017,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 48,
    "id": "27c5eb3d",
    "metadata": {},
    "outputs": [
@@ -1025,53 +1029,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Comparative analysis: \u001b[91m\u001b[1mTest Failed\u001b[22m\u001b[39m at \u001b[39m\u001b[1mc:\\Users\\User\\Documents\\GitHub\\ps4-cheme-5800-f25-cl2832\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y101sZmlsZQ==.jl:99\u001b[22m\n",
-      "  Expression: did_I_answer_the_discussion_question_1 == true\n",
-      "   Evaluated: nothing == true\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
-      "\u001b[90m   @\u001b[39m \u001b[90mC:\\Users\\User\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\Test\\src\\\u001b[39m\u001b[90m\u001b[4mTest.jl:680\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
-      " [2] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
-      "\u001b[90m   @\u001b[39m \u001b[90mc:\\Users\\User\\Documents\\GitHub\\ps4-cheme-5800-f25-cl2832\\\u001b[39m\u001b[90m\u001b[4mjl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y101sZmlsZQ==.jl:99\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
-      " [3] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
-      "\u001b[90m   @\u001b[39m \u001b[90mC:\\Users\\User\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\Test\\src\\\u001b[39m\u001b[90m\u001b[4mTest.jl:1709\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
-      " [4] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
-      "\u001b[90m   @\u001b[39m \u001b[90mc:\\Users\\User\\Documents\\GitHub\\ps4-cheme-5800-f25-cl2832\\\u001b[39m\u001b[90m\u001b[4mjl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y101sZmlsZQ==.jl:92\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
-      " [5] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
-      "\u001b[90m   @\u001b[39m \u001b[90mC:\\Users\\User\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\Test\\src\\\u001b[39m\u001b[90m\u001b[4mTest.jl:1709\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
-      " [6] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
-      "\u001b[90m   @\u001b[39m \u001b[90mc:\\Users\\User\\Documents\\GitHub\\ps4-cheme-5800-f25-cl2832\\\u001b[39m\u001b[90m\u001b[4mjl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y101sZmlsZQ==.jl:63\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
-      " [7] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
-      "\u001b[90m   @\u001b[39m \u001b[90mC:\\Users\\User\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\Test\\src\\\u001b[39m\u001b[90m\u001b[4mTest.jl:1709\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
-      " [8] top-level scope\n",
-      "\u001b[90m   @\u001b[39m \u001b[90mc:\\Users\\User\\Documents\\GitHub\\ps4-cheme-5800-f25-cl2832\\\u001b[39m\u001b[90m\u001b[4mjl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y101sZmlsZQ==.jl:3\u001b[24m\u001b[39m\n",
-      "\u001b[0m\u001b[1mTest Summary:                                                            | \u001b[22m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[91m\u001b[1mFail  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal  \u001b[22m\u001b[39m\u001b[0m\u001b[1mTime\u001b[22m\n",
-      "CHEME 5800 PS4 Test Suite                                                | \u001b[32m  48  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[36m   49  \u001b[39m\u001b[0m0.2s\n",
-      "  Task 1: Compute the growth rate matrix                                 | \u001b[32m  10  \u001b[39m\u001b[91m      \u001b[39m\u001b[36m   10  \u001b[39m\u001b[0m0.0s\n",
-      "  Task 2: Solve the optimal allocation problem using Simulated Annealing | \u001b[32m  20  \u001b[39m\u001b[91m      \u001b[39m\u001b[36m   20  \u001b[39m\u001b[0m0.0s\n",
-      "  Task 3: Check results using another method                             | \u001b[32m  18  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[36m   19  \u001b[39m\u001b[0m0.2s\n",
-      "    MadNLP model construction                                            | \u001b[32m   3  \u001b[39m\u001b[91m      \u001b[39m\u001b[36m    3  \u001b[39m\u001b[0m0.0s\n",
-      "    MadNLP solution                                                      | \u001b[32m  12  \u001b[39m\u001b[91m      \u001b[39m\u001b[36m   12  \u001b[39m\u001b[0m0.0s\n",
-      "    Comparative analysis                                                 | \u001b[32m   3  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[36m    4  \u001b[39m\u001b[0m0.2s\n"
-     ]
-    },
-    {
-     "ename": "TestSetException",
-     "evalue": "Some tests did not pass: 48 passed, 1 failed, 0 errored, 0 broken.",
-     "output_type": "error",
-     "traceback": [
-      "Some tests did not pass: 48 passed, 1 failed, 0 errored, 0 broken.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] finish(ts::Test.DefaultTestSet; print_results::Bool)\n",
-      "   @ Test C:\\Users\\User\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\Test\\src\\Test.jl:1259\n",
-      " [2] finish(ts::Test.DefaultTestSet)\n",
-      "   @ Test C:\\Users\\User\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\Test\\src\\Test.jl:1234\n",
-      " [3] macro expansion\n",
-      "   @ C:\\Users\\User\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\Test\\src\\Test.jl:1725 [inlined]\n",
-      " [4] top-level scope\n",
-      "   @ c:\\Users\\User\\Documents\\GitHub\\ps4-cheme-5800-f25-cl2832\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y101sZmlsZQ==.jl:3"
+      "\u001b[0m\u001b[1mTest Summary:                                                            | \u001b[22m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal  \u001b[22m\u001b[39m\u001b[0m\u001b[1mTime\u001b[22m\n",
+      "CHEME 5800 PS4 Test Suite                                                | \u001b[32m  49  \u001b[39m\u001b[36m   49  \u001b[39m\u001b[0m0.0s\n",
+      "  Task 1: Compute the growth rate matrix                                 | \u001b[32m  10  \u001b[39m\u001b[36m   10  \u001b[39m\u001b[0m0.0s\n",
+      "  Task 2: Solve the optimal allocation problem using Simulated Annealing | \u001b[32m  20  \u001b[39m\u001b[36m   20  \u001b[39m\u001b[0m0.0s\n",
+      "  Task 3: Check results using another method                             | \u001b[32m  19  \u001b[39m\u001b[36m   19  \u001b[39m\u001b[0m0.0s\n"
      ]
     }
    ],
@@ -1214,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 49,
    "id": "68a88232",
    "metadata": {},
    "outputs": [
